dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/ctl.c)
AC_CONFIG_HEADER(src/config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET

AC_CANONICAL_HOST

AC_CHECK_LIB(m, sqrt)
AC_CHECK_LIB(readline, readline)
AC_CHECK_LIB(dl, dlopen)
AC_CHECK_LIB(guile, gh_eval_str)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(guile/gh.h)

dnl Checks for library functions.

dnl Checks for Guile 1.3 functions.

AC_TRY_LINK([#include <guile/gh.h>
], gh_load(0);, AC_DEFINE(HAVE_GH_LOAD))

AC_TRY_LINK([#include <guile/gh.h>
], gh_bool2scm(0);, AC_DEFINE(HAVE_GH_BOOL2SCM))

AC_TRY_LINK([#include <guile/gh.h>
], gh_vector_ref(0,0);, AC_DEFINE(HAVE_GH_VECTOR_REF))

AC_TRY_LINK([#include <guile/gh.h>
], gh_list_ref(0,0);, AC_DEFINE(HAVE_GH_LIST_REF))

AC_TRY_LINK([#include <guile/gh.h>
], gh_length(0);, AC_DEFINE(HAVE_GH_LENGTH))

AC_OUTPUT(examples/Makefile)
